Fix padding top on small laptops

--- a/src/components/portfolio/projects.scss
+++ b/src/components/portfolio/projects.scss
@@ -232,7 +232,7 @@
     #projects{
         .card-container{
             top: 15%; 
-            padding-top: 10%;
+            padding-top: 5%;
             left: 0%;
             .project-cards{
                 // height: 450px;
